--- a/src/output.css
+++ b/src/output.css
@@ -562,16 +562,20 @@ video {
   height: 5rem;
 }
 
-.h-lvh {
-  height: 100lvh;
+.h-5\/6 {
+  height: 83.333333%;
 }
 
 .w-60 {
   width: 15rem;
 }
 
-.w-lvw {
-  width: 100lvw;
+.w-64 {
+  width: 16rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .items-center {
@@ -634,4 +638,27 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+header {
+  position:relative;
+  top: 0;
+  left: 0;
+}
+
+sidebar{
+  position: fixed;
+  left: 0;
+  top: 15%;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  height: 630px;
+  width: 1100px;
+  position: relative;
+  top: 10;
+  left:27%;
 }
