--- a/src/input.css
+++ b/src/input.css
@@ -1,24 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow:hidden;
+}
 header {
     position:relative;
     top: 0;
     left: 0;
 }
 sidebar{
+    width: 415px;
     position: fixed;
     left: 0;
-    top: 15%;
+    top: 11%;
 }
 main{
     display: flex;
     flex-direction: column;
-    background-color: aqua;
-    height: 630px;
-    width: 1100px;
-    position: relative;
+    position:fixed;
     top: 10;
     left:27%;
 }
+.buttons {
+    width: 18rem;
+    border: solid black 2px;
+    border-radius: 5px;
+    margin: 1rem 0;
+    height: 2rem;
+}
+form div {
+    text-align: center;
+    position: relative;
+  }
+  
+form div span {
+    display: inline-block;
+  }
+  
+ form div span:before,
+ form div span:after {
+    border-top: 1px solid black;
+    display: block;
+    height: 1px;
+    content: " ";
+    width: 40%;
+    position: absolute;
+    left: 0;
+    top: 1.2em;
+  }
+  
+ form div span:after {
+    right: 0;
+    left: auto;
+  }
+  .article1,.article2,.article3,.article4,.article5 {
+    width: 180px;
+    height: 240px;
+    margin-right: 2rem;
+    background-color: rgb(95, 95, 100);
+    border-radius: 10px;
+  }
