--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,44 @@ video {
   --tw-contain-style:  ;
 }
 
+.relative {
+  position: relative;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -562,20 +600,36 @@ video {
   height: 5rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
+.h-64 {
+  height: 16rem;
 }
 
-.w-60 {
-  width: 15rem;
+.h-72 {
+  height: 18rem;
 }
 
-.w-64 {
-  width: 16rem;
+.h-96 {
+  height: 24rem;
 }
 
-.w-96 {
-  width: 24rem;
+.h-dvh {
+  height: 100dvh;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-9\/12 {
+  width: 75%;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .items-center {
@@ -586,26 +640,23 @@ video {
   justify-content: center;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
-.border-solid {
-  border-style: solid;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.bg-black {
+.bg-blue-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700 {
@@ -613,12 +664,26 @@ video {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
 .text-center {
   text-align: center;
 }
 
+.font-sans {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 .font-serif {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -631,13 +696,33 @@ video {
   line-height: 1.75rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
 .font-medium {
   font-weight: 500;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow:hidden;
 }
 
 header {
@@ -647,18 +732,58 @@ header {
 }
 
 sidebar{
+  width: 415px;
   position: fixed;
   left: 0;
-  top: 15%;
+  top: 11%;
 }
 
 main{
   display: flex;
   flex-direction: column;
-  background-color: aqua;
-  height: 630px;
-  width: 1100px;
-  position: relative;
+  position:fixed;
   top: 10;
   left:27%;
+}
+
+.buttons {
+  width: 18rem;
+  border: solid black 2px;
+  border-radius: 5px;
+  margin: 1rem 0;
+  height: 2rem;
+}
+
+form div {
+  text-align: center;
+  position: relative;
+}
+
+form div span {
+  display: inline-block;
+}
+
+form div span:before,
+ form div span:after {
+  border-top: 1px solid black;
+  display: block;
+  height: 1px;
+  content: " ";
+  width: 40%;
+  position: absolute;
+  left: 0;
+  top: 1.2em;
+}
+
+form div span:after {
+  right: 0;
+  left: auto;
+}
+
+.article1,.article2,.article3,.article4,.article5 {
+  width: 180px;
+  height: 240px;
+  margin-right: 2rem;
+  background-color: rgb(95, 95, 100);
+  border-radius: 10px;
 }
