--- a/src/output.css
+++ b/src/output.css
@@ -572,6 +572,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .ml-12 {
   margin-left: 3rem;
 }
@@ -584,12 +588,12 @@ video {
   margin-left: 2rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -600,40 +604,32 @@ video {
   display: flex;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-20 {
   height: 5rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .h-96 {
   height: 24rem;
 }
 
-.h-dvh {
-  height: 100dvh;
-}
-
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-72 {
   width: 18rem;
 }
 
-.w-9\/12 {
-  width: 75%;
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .flex-row {
@@ -646,6 +642,10 @@ video {
 
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .rounded-lg {
@@ -676,6 +676,10 @@ video {
   text-align: center;
 }
 
+.text-start {
+  text-align: start;
+}
+
 .font-sans {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -696,6 +700,11 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -721,6 +730,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -736,6 +749,7 @@ header {
 
 sidebar{
   width: 415px;
+  height: 850px;
   position: fixed;
   left: 0;
   top: 11%;
@@ -757,12 +771,12 @@ input,button {
   height: 2rem;
 }
 
-.weather-img {
+div .weather-img {
   width: 100px;
   height: 100px;
   position: relative;
   float: right;
-  top: 30%;
+  top: 20%;
   right: 10%;
 }
 
@@ -775,12 +789,13 @@ input,button {
   right: 10%;
 }
 
-.locationDate,.temp,.wind,.humidity {
+.locationDetails {
   font-family: 'Times New Roman', Times, serif;
   font-size: large;
+  text-align: center;
   position: relative;
-  top: 30%;
-  left: 7%;
+  top: 10%;
+  left: 5%;
 }
 
 .locationDate {
@@ -813,10 +828,211 @@ form div span:after {
   left: auto;
 }
 
-.article1,.article2,.article3,.article4,.article5 {
+.article {
   width: 180px;
   height: 240px;
   margin-right: 2rem;
   background-color: rgb(95, 95, 100);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:start;
+}
+
+.image-div {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  right: 10%;
+  top: 15%;
+  float: right;
+}
+
+.main-card {
+  position: relative;
+  top: 15%;
+}
+
+.article h3,div {
+  text-align: center;
+  position: relative;
+  top: 5%;
+}
+
+.main {
+  height: 850px;
+  width: 1150px;
+}
+
+.main-data{
+  width:1050px ;
+  height: 250px;
+}
+
+.alldata-cards{
+  height: 400px;
+}
+
+@media screen and (min-width:380px) and (max-width:770px){
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-y: scroll;
+  }
+
+  .sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 768px;
+    height: 400px;
+    position: relative;
+    top: 10%;
+    overflow-y: hidden;
+  }
+
+  .form{
+    position: relative;
+    top: 10%;
+  }
+
+  .main{
+    width: 100%;
+    height: 1100px;
+    display:flex;
+    flex-direction: column;
+    position: relative;
+    left: 0%;
+  }
+
+  .main-data{
+    width:auto;
+    height: 200px;
+    overflow-y: hidden;
+    margin-right: 2rem;
+  }
+
+  .alldata-cards{
+    width: 100%;
+    height: 700px;
+    /* margin-top: 3rem; */
+  }
+
+  .article{
+    height: 250px;
+    width: 300px;
+    margin: 0;
+    margin-right: 10px;
+  }
+
+  .article:nth-child(5){
+    margin-right: 2.5rem;
+  }
+}
+
+@media screen and (max-width:376px){
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-y: scroll;
+  }
+
+  .sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 375px;
+    height: 400px;
+    position:relative;
+    top: 10%;
+    overflow-y: hidden;
+  }
+
+  .form{
+    width: 375px;
+    position: relative;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main{
+    width: 100%;
+    height:auto;
+    display:flex;
+    flex-direction: column;
+    position: relative;
+    left: 0%;
+  }
+
+  .locationDetails{
+    position: relative;
+    overflow: hidden;
+    height: 250px;
+    left: 0;
+  }
+
+  .main-card{
+    position: relative;
+    overflow: hidden;
+  }
+
+  .main-data{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    width:350px;
+    position: relative;
+    height: 400px;
+    overflow-y: hidden;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .image-div{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    /* left: 10%; */
+    top: 0%;
+  }
+
+  .alldata-cards{
+    width: 100%;
+    height: 700px;
+    position: relative;
+    /* margin-top: 3rem; */
+  }
+
+  .heading{
+    text-align: center;
+    position: relative;
+    right: 7%;
+    margin-bottom: 2rem;
+  }
+
+  .allarticles{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .article{
+    height: 250px;
+    width: 200px;
+    margin-bottom: 1rem;
+  }
+
+  .article:nth-child(5){
+    margin-right: 2.5rem;
+  }
 }
