--- a/src/output.css
+++ b/src/output.css
@@ -616,20 +616,8 @@ video {
   width: 91.666667%;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
 .w-72 {
   width: 18rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-7 {
-  width: 1.75rem;
 }
 
 .flex-row {
@@ -703,11 +691,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -769,6 +752,32 @@ input,button {
   border-radius: 5px;
   margin: 1rem 0;
   height: 2rem;
+}
+
+select, option {
+  width: 1rem;
+  height: 2rem;
+  background-color: #fff;
+  border:2px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  color: #333;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+option {
+  background-color: #fff;
+  color: #333;
+}
+
+.dropdown{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 div .weather-img {
